# cryptopals_c

./: .gitmodules  CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/crypto/: CMakeLists.txt  crypto.c  crypto.h  languages.c  languages.h
libs/crypto/test/: CMakeLists.txt  test_crypto.c
libs/encoding/: CMakeLists.txt  encoding.c  encoding.h
libs/encoding/test/: CMakeLists.txt  test_encoding.c
libs/utils/: CMakeLists.txt  hashmap.c  hashmap.h  utils.c  utils.h
libs/utils/test/: CMakeLists.txt  test_utils.c
products/: CMakeLists.txt
products/bakasable/: CMakeLists.txt  main.c
products/decipher_xor_rk/: CMakeLists.txt  block.h  main.c
products/decipher_xor_rk/test/: CMakeLists.txt  test.sh
products/decipher_xor_sbk/: CMakeLists.txt  deciphered.c  deciphered.h  main.c
products/decipher_xor_sbk/test/: CMakeLists.txt  test.sh
products/detect_aes_ecb/: CMakeLists.txt  main.c
products/detect_aes_ecb/test/: CMakeLists.txt  test.sh
